5.3.0:
- New: another autumnal Pixel 6 wallpaper!
- New: additional Dracula theme color variants in the Pixel 4 Doodle collection
- New: battery saver options for page swipe animation, tilt and zoom effects
- New: Finnish translation
- Improved: splash screen background color on Android 12
- Improved: workaround for broken wallpaper animation available with long-tap instead of single-tap on main button
- Fixed: dark status bar icons on dark wallpapers on some devices (finally, thanks Vivek!)
- Fixed: random wallpaper not refreshing when lockscreen zoom was turned off

Please consider translating this app into your language at Transifex.

5.2.0:
- New: default shape scale based on display size and density (reset all options to let Doodle calculate the default shape scale)
- New: FAQ in info section (tap info card on start page)
- New: black (AMOLED) app theme (only with one static accent color due to internal reasons)
- Improved: wallpaper design selection thumbnails and overview page appearance
- Improved: method to determine if wallpaper is currently applied
- Improved: tilt effect options hidden if device has no acceleration sensor
- Improved: wallpaper restart not required to apply changed colors on Android 12 (my fault, turning off screen is enough)
- Improved: system bars appearance for older Android versions
- Fixed: provide a possible solution for MIUI bug that stops wallpaper animation (shown when you tap on "Set wallpaper")
- Fixed: app theme dark mode switching on Android 12
- Fixed: reset option didn't work as expected
- Fixed: unwanted horizontal position changes of bottom messages and big button when switching between app sections
- Fixed: some crashes and bugs

5.1.0:
- New: another sandy Pixel 6 wallpaper
- New: random wallpaper option now lets you select your favourite designs
- New: Arabic, Danish and Hebrew translations
- New: additional blue and purple app themes