@@ -3,6 +3,7 @@
 - New: additional Dracula theme color variants in the Pixel 4 Doodle collection
 - New: battery saver options for page swipe animation, tilt and zoom effects
 - New: Finnish translation
+- Improved: separate reset button for shape scale to recalculate optimal scale based on display metrics
 - Improved: splash screen background color on Android 12
 - Improved: workaround for broken wallpaper animation available with long-tap instead of single-tap on main button
 - Fixed: dark status bar icons on dark wallpapers on some devices (finally, thanks Vivek!)
